# obs-studio

UI/: obs-app.cpp
UI/importers/: studio.cpp
libobs/: obs-config.h  obs-source.c  obs-windows.c
libobs-sapphire/: CMakeLists.txt  sapphire-capture.cpp  sapphire-capture.h
plugins/win-capture/: Sapphire_Export.h  dc-capture.h  monitor-capture.c
test/win/: test.cpp
test/win/test/: test.sln
test/win/test/test/: test.vcxproj
